--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -8,3 +8,9 @@
 <%= link_to "edit", edit_article_path(@article) %>
 <h3>Comments</h3>
 <%= render partial: 'articles/comment', collection: @article.comments %>
+<p>
+  Tags:
+  <% @article.tags.each do |tag| %>
+    <%= link_to tag.name, tag_path(tag) %>
+  <% end %>
+</p>
