--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -5,8 +5,10 @@
 <h3>Post a Comment</h3>
 <p>(Comment form will go here)</p>
 <%= link_to "<< Back to Articles List", articles_path %>
+<% if logged_in? %>
 <%= link_to "delete", article_path(@article), method: :delete, data: {confirm: "Really delete the article?"} %>
 <%= link_to "edit", edit_article_path(@article) %>
+<% end %>
 <h3>Comments</h3>
 <%= render partial: 'articles/comment', collection: @article.comments %>
 <p>
